fix: add missing background to home icon

--- a/src/components/GuildNav/GuildNav.module.css
+++ b/src/components/GuildNav/GuildNav.module.css
@@ -113,6 +113,10 @@
 	background-color: var(--brand-experiment);
 }
 
+.home {
+	background-color: var(--background-primary);
+}
+
 .acronym {
 	font-weight: 500;
 	font-family: var(--font-primary);
